tests/misc_tests/type_eq_ui_tests/constructor_bound-err.stderr
error[E0310]: the parameter type `T` may not live long enough
 --> tests/misc_tests/type_eq_ui_tests/constructor_bound-err.rs:4:5
  |
4 |     TypeEq::<T, U>::with_any()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     the parameter type `T` must be valid for the static lifetime...
  |     ...so that the type `T` will meet its required lifetime bounds
  |
help: consider adding an explicit lifetime bound
  |
3 | fn unconstrained_with_any_call<T: 'static, U>() -> Option<TypeEq<T, U>> {
  |                                 +++++++++

error[E0310]: the parameter type `U` may not live long enough
 --> tests/misc_tests/type_eq_ui_tests/constructor_bound-err.rs:4:5
  |
4 |     TypeEq::<T, U>::with_any()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     the parameter type `U` must be valid for the static lifetime...
  |     ...so that the type `U` will meet its required lifetime bounds
  |
help: consider adding an explicit lifetime bound
  |
3 | fn unconstrained_with_any_call<T, U: 'static>() -> Option<TypeEq<T, U>> {
  |                                    +++++++++
